--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
-/*
- * just an example :D
- */
 body {
 	font-family: Arial;
+	background-color: #333;
 }
 .content {
-	border: 1px solid #DBDBDB;
-	background-color: #FFF;
+	background-color: #3E3E3E;
+	border: 1px solid rgba(96, 96, 95, 0.5);
+	border-radius: 2px 2px 2px 2px;
+	box-shadow: 0 0 40px rgba(95, 101, 75, 0.5) inset, 0 0 40px rgba(0, 0, 0, 0.5);
+	color: #FFFFFF;
+	font-size: 13px;
 }
