--- a/css/themes/info.css
+++ b/css/themes/info.css
@@ -1,6 +1,9 @@
 /*
  * this is also an example
  */
-body {
-	font-family: 'Droid Serif', serif;
+h1 {
+	color: #F4FF8E;
+	font-family: 'Sofia',cursive;
+	font-weight: normal;
+	text-shadow: 0 3px 0 #000000;
 }
